# agentic-ai-system

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  requirements-dev.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 905427f06482_initial.py
app/: config.py  db.py  main.py  models.py
app/agents/: base.py  calendar.py  communication.py  controller.py  research.py
app/core/: intents.py  memory.py  workflow.py
app/middleware/: auth.py
app/routers/: auth.py  health.py  workflows.py
app/services/: arcade.py  groq_client.py
app/tools/: gcal_arcade.py  gcal_mock.py  gmail_arcade.py  gmail_mock.py  registry.py  web_mock.py  web_search.py
frontend/app/: layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/workflows/[id]/: page.tsx
frontend/components/: Header.tsx  StatusBadge.tsx  TaskStep.tsx  WorkflowResult.tsx
frontend/lib/: api.ts
tests/: conftest.py  test_endpoints.py  test_workflow_engine.py
