[project]
name = "agentic-ai-system"
description = "Agentic AI System MVP with controller + specialist agents and workflow engine"
authors = [{name="Sahil Subodh Bane"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.8.2",
  "sqlalchemy==2.0.36",
  "alembic==1.13.2",
  "psycopg[binary]==3.2.1",
  "httpx==0.27.0",
  "arcadepy",
]

[tool.ruff]
line-length = 100